<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VS aenz Client</string>
    <string name="hello_world">Sensirion Webservice</string>
    <string name="action_settings">Settings</string>
    <string name="btn_http">HTTP</string>
    <string name="btn_wsdl">WSDL</string>
    <string name="title_activity_soapclient">SOAPClient</string>
    <string name="btn_raw">Raw (takes approx 2 min)</string>
    <string name="btn_lib">Lib</string>
    <string name="btn_json">Json</string>
	<string name="title_activity_sensor">Rest Service</string>
    <string name="txt_response">Choose Requesttype</string>
    
    <!-- strings declared by andi: -->
    <string name="btn_soap_manual">SOAP manual</string>
    <string name="btn_soap_library">SOAP library</string>
    <string name="txt_soap_man">you chose manual</string>
    <string name="txt_soap_lib">you chose library</string>
</resources>
