<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a2.aenz.client.SoapActivity" >

    <Button
        android:id="@+id/btn_soap_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSoapManual"
        android:text="@string/btn_soap_manual" />

    <Button
        android:id="@+id/btn_soap_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSoapLibrary"
        android:text="@string/btn_soap_library" />

    <TextView
        android:id="@+id/txt_soap_disp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</LinearLayout>